[package]
name = "lifec_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = [ "full" ] }
hyper-tls = "0.5.0"
lifec = { git = "https://github.com/juliusl/lifec.git", branch = "main" }
specs = "0.18.0"
tokio = "1.19.2"
